# tg-news

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
tg_news/: feeds.json  main.py
